Work for #3866: fix table borders disappear on Safari

--- a/packages/survey-creator-core/src/property-grid-theme/blocks/spg-table.scss
+++ b/packages/survey-creator-core/src/property-grid-theme/blocks/spg-table.scss
@@ -1,7 +1,9 @@
+.spg-table-wrapper {
+  border: 1px solid $border;
+}
 .spg-table {
   width: 100%;
   background-color: $background;
-  border: 1px solid $border;
   border-collapse: collapse;
   tr {
     border-bottom: 1px solid $border;
@@ -53,5 +55,5 @@
   white-space: nowrap;
   text-overflow: ellipsis;
   overflow: hidden;
-  max-width: 100px;  
+  max-width: 100px;
 }
